--- a/dubbo-consumer/pom.xml
+++ b/dubbo-consumer/pom.xml
@@ -6,99 +6,62 @@
         <groupId>com.jingoal.test</groupId>
 		<artifactId>dubbo-demo-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>dubbo-consumer</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
 
-	<properties>
-		<org.springframework-version>4.1.4.RELEASE</org.springframework-version>
-		<slf4j.version>1.7.5</slf4j.version>
-	</properties>
-
 	<dependencies>
-		<!-- interface dependencies settins -->
+		<!-- interface dependency settins -->
 		<dependency>
 			<groupId>com.jingoal.test</groupId>
 			<artifactId>dubbo-open</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
 
-		<!-- dubbo dependencies settings -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>dubbo</artifactId>
-			<version>2.5.3</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.101tec</groupId>
 			<artifactId>zkclient</artifactId>
-			<version>0.4</version>
-			<exclusions>
-				<exclusion>
-					<groupId>log4j</groupId>
-					<artifactId>log4j</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 
-		<!-- test dependencies settings -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.9</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>${org.springframework-version}</version>
-			<scope>test</scope>
 		</dependency>
 
-		<!-- spring dependencies settings -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>${org.springframework-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>${org.springframework-version}</version>
-<!-- 			<exclusions> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>commons-logging</groupId> -->
-<!-- 					<artifactId>commons-logging</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 			</exclusions> -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
-			<version>${org.springframework-version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
-			<version>1.0.13</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId> <!-- need this to be able to actually use logback -->
-			<version>1.0.13</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>log4j-over-slf4j</artifactId>
-			<version>${slf4j.version}</version>
 		</dependency>
 
 <!-- required by dubbo -->
