--- a/dubbo-service/pom.xml
+++ b/dubbo-service/pom.xml
@@ -6,104 +6,62 @@
         <groupId>com.jingoal.test</groupId>
 		<artifactId>dubbo-demo-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>dubbo-service</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<properties>
-		<org.springframework-version>4.1.4.RELEASE</org.springframework-version>
-		<slf4j.version>1.7.5</slf4j.version>
-        <junit_version>4.10</junit_version>
-	</properties>
-
 	<dependencies>
-		<!-- interface dependencies settins -->
+		<!-- interface dependency settins -->
 		<dependency>
 			<groupId>com.jingoal.test</groupId>
 			<artifactId>dubbo-open</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
 
-		<!-- dubbo dependencies settings -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>dubbo</artifactId>
-            <version>2.5.3</version>  <!-- if need to use 2.8.3, need to tune more -->
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.101tec</groupId>
 			<artifactId>zkclient</artifactId>
-			<version>0.4</version>
-			<exclusions>
-				<exclusion>
-					<groupId>log4j</groupId>
-					<artifactId>log4j</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 
-		<!-- spring dependencies settins -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>${org.springframework-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>${org.springframework-version}</version>
-<!-- 			<exclusions> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>commons-logging</groupId> -->
-<!-- 					<artifactId>commons-logging</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 			</exclusions> -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
-			<version>${org.springframework-version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-core</artifactId>
-			<version>1.0.13</version>
+            <artifactId>logback-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId> <!-- need this to be able to actually use logback -->
-			<version>1.0.13</version>
+            <artifactId>logback-classic</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>log4j-over-slf4j</artifactId>
-			<version>${slf4j.version}</version>
 		</dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit_version}</version>
-            <scope>test</scope>
         </dependency>
 
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>commons-logging</groupId> -->
-<!-- 			<artifactId>commons-logging</artifactId> -->
-<!-- 			<version>1.1.1</version> -->
-<!-- 		</dependency> -->
-
-<!-- for jmx -->
+        <!-- for jmx -->
 		<dependency>
 			<groupId>com.jingoal.mail</groupId>
 			<artifactId>jin-mail-service</artifactId>
