--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,106 @@
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 
+	<properties>
+		<org.springframework-version>3.1.4.RELEASE</org.springframework-version>
+		<slf4j.version>1.7.5</slf4j.version>
+        <junit_version>4.10</junit_version>
+	</properties>
+
 	<modules>
 		<module>dubbo-open</module>
 		<module>dubbo-service</module>
 		<module>dubbo-consumer</module>
 	</modules>
+	
+    <dependencyManagement>
+        <dependencies>
+
+            <!-- dubbo dependency settings -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>dubbo</artifactId>
+                <version>2.8.3.1</version>  <!-- if need to use 2.8.3, need to tune more -->
+                <exclusions> <!-- this works, and child POM won't need to write these exclusions any more -->
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <!-- registry -->
+            <dependency>
+                <groupId>com.101tec</groupId>
+                <artifactId>zkclient</artifactId>
+                <version>0.4</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <!-- test dependency settings -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.9</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${org.springframework-version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <!-- spring dependency settings -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${org.springframework-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${org.springframework-version}</version>
+                <!-- 			<exclusions> -->
+                    <!-- 				<exclusion> -->
+                        <!-- 					<groupId>commons-logging</groupId> -->
+                        <!-- 					<artifactId>commons-logging</artifactId> -->
+                        <!-- 				</exclusion> -->
+                    <!-- 			</exclusions> -->
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>${org.springframework-version}</version>
+            </dependency>
+
+            <!-- logging -->
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId> <!-- needed to print log -->
+                <version>1.0.13</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId> <!-- need this to be able to actually use logback -->
+                <version>1.0.13</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>log4j-over-slf4j</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+        </dependencies>
+    </dependencyManagement>
+	
 </project>
